--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
   seek: # The SEEK application
     #build: .
     #image: fairdom/seek:1.7
-    image: seeksearch2 
-    container_name: seeksearch2
+    image: seeksearchdev 
+    container_name: seeksearchdev
     command: docker/entrypoint.sh
     restart: always
     environment:
@@ -39,7 +39,7 @@ services:
   seek_workers: # The SEEK delayed job workers
       #build: .
       #image: fairdom/seek:1.7
-      image: seeksearch2
+      image: seeksearchdev
       container_name: seek-workers
       command: docker/start_workers.sh
       restart: always
@@ -59,7 +59,7 @@ services:
         - solr
 
   solr:
-    image: fairdom/seek-solr
+    image: seek-solr-new2 #fairdom/seek-solr
     container_name: seek-solr
     restart: always
     environment:
