--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
   seek: # The SEEK application
     #build: .
     #image: fairdom/seek:1.7
-    image: seekpeople 
-    container_name: seekpeople
+    image: seeklooks
+    container_name: seeklooks
     command: docker/entrypoint.sh
     restart: always
     environment:
