adding images, fix permission error, change navbar

--- a/config/image_files/image_file_dictionary.yml
+++ b/config/image_files/image_file_dictionary.yml
@@ -107,6 +107,10 @@ skipped: 'crystal_project/22x22/actions/undo.png'
 snapshot: 'crystal_project/22x22/apps/camera_unmount---.png'
 snapshot_avatar: 'crystal_project/48x48/apps/camera_unmount---.png'
 spinner: 'ajax-loader.gif'
+splash1-wide: 'splash1-wide.png'
+splash2-wide: 'splash2-wide.png'
+splash1: 'splash1.png'
+splash2: 'splash2.png'
 spreadsheet: 'famfamfam_silk/table.png'
 spreadsheet_annotation: 'famfamfam_silk/tag_blue.png'
 spreadsheet_annotation_add: 'famfamfam_silk/tag_blue_add.png'
