--- a/config/image_files/image_file_dictionary.yml
+++ b/config/image_files/image_file_dictionary.yml
@@ -1,3 +1,4 @@
+aboutimg: 'firstDRGs_SGR_wide.png'
 activate: 'crystal_project/16x16/apps/clean.png'
 add: 'famfamfam_silk/add.png'
 announcement: 'famfamfam_silk/transmit.png'
