--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
   seek: # The SEEK application
     #build: .
     #image: fairdom/seek:1.7
-    image: seekfix
-    container_name: seekfix
+    image: seekcolors
+    container_name: seekcolors
     command: docker/entrypoint.sh
     restart: always
     environment:
@@ -39,7 +39,7 @@ services:
   seek_workers: # The SEEK delayed job workers
       #build: .
       #image: fairdom/seek:1.7
-      image: seekfix
+      image: seekcolors
       container_name: seek-workers
       command: docker/start_workers.sh
       restart: always
